[package]
name = "wasm_extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["parsing", "full"] }
proc-macro2 = "1.0.49"
quote = "1.0.23"

[lib]
proc-macro = true