[package]
name = "wasm_extra_macros"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "Macros for `wasm_extra` crate."
documentation = "https://docs.rs/wasm_extra_macros"
readme = "README.md"
repository = "https://github.com/JohnScience/wasm_extra_macros"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["wasm", "frontend"]
categories = ["wasm", "web-programming"] # https://crates.io/category_slugs
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
autobins = false
# autoexamples = true
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["parsing", "full"] }
proc-macro2 = "1.0.51"
quote = "1.0.23"
derive-syn-parse = "0.1.5"

[lib]
proc-macro = true